# Chronos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
source/: ChronosEditor.cpp  ChronosEditor.h  ChronosProcessor.cpp  ChronosProcessor.h  Includes.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  Smoother.h
source/DSP/: BaseDSP.h  ProcessBlock.h  ProcessDSP.h  TapeDelayDSP.h
source/DSP/TapeDelay/: TapeDelay.h
source/dsp/buffers/: aligned_simd_buffer.h  aligned_simd_buffer_detail.h  aligned_simd_buffer_view.h  static_delay_buffer.h
source/dsp/bypass/: crossfade_bypass_engine.h
source/dsp/diffusion/: blockrate_smoother.h  damping_filter.h  diffusion_chain.h  diffusion_processor.h  diffusion_stage.h  fdn_stereo_processor.h  feedback_delay_network.h  feedback_shelf_filter.h  modulated_delayline.h  multichannel_static_delay_bank.h  orthogonal_mixing_matrices.h  predelay_buffer.h  quadrature_oscillator.h  schroeder_allpass.h  stereo_multichannel_bridge.h  stereo_processor.h
source/dsp/dynamics/: block_lerp.h  bridge_ducker.h  envelope_follower.h  sinh_diode_bridge.h  sinh_ducker.h
source/dsp/engine/delay/: delay_engine.h  delay_interpolator.h  waveshaper.h
source/dsp/filter/: dc_blocker.h  splane_curvefit_core.h  splane_curvefit_highpass.h  splane_curvefit_lowpass.h
source/dsp/math/: fastermath.h
source/dsp/math/simd/: simd_config.h
source/dsp/modulation/: flutter_engine.h  noise_generator_engine.h  ou_drift_process.h  wow_engine.h
source/dsp/wdf/: wdf_core.h  wdf_diode_pair.h  wdf_math.h
source/gui/: ChronosColours.h  ChronosKnob.cpp  ChronosKnob.h
source/utils/data/: metering_frame.h
source/utils/helpers/: conversion.h  tempo_sync.h
source/utils/memory/: spsc_queue.h
tests/perf_harness/: CMakeLists.txt  perf_aligned_buffer_test.cpp  perf_boundtopi_test.cpp  perf_chronos_reverb_test.cpp  perf_cosh_test.cpp  perf_delay_engine_test.cpp  perf_diffusion_test.cpp  perf_diode_methods_test.cpp  perf_ou_drift_test.cpp  perf_sinh_test.cpp  perf_splane_filter_test.cpp  perf_tan_test.cpp  perf_tanh_test.cpp  perf_test.cpp  visualize_boundtopi_perf.py  visualize_perf.py  visualize_tan_perf.py  visualize_tanh_perf.py  viz_cosh_perf.py  viz_diode_methods_perf.py  viz_perf_chronos_reverb.py  viz_perf_ou_drift.py  viz_session_perf.py  viz_sinh_perf.py
tests/perf_harness/logs/: perf_aligned_buffer.csv  perf_boundtopi_results.csv  perf_chronos_reverb.csv  perf_cosh_results.csv  perf_diffusion.csv  perf_diode_methods.csv  perf_ou_drift.csv  perf_sinh_results.csv  perf_splane_filter.csv  perf_tan_results.csv  perf_tanh_results.csv
tests/simd_harness/: CMakeLists.txt  chronos_reverb_amount_stability_test.cpp  chronos_reverb_characterisation_test.cpp  chronos_reverb_smoke_test.cpp  delay_engine_ducker_test.cpp  delay_functional_test.cpp  diffusion_chain_test.cpp  diffusion_matrix_test.cpp  fdn_test.cpp  ou_drift_characterisation_test.cpp  simd_alignment_delay_test.cpp  simd_boundtopi_test.cpp  simd_cosh_test.cpp  simd_delay_engine_test.cpp  simd_ducker_smoke_test.cpp  simd_sinh_test.cpp  simd_tan_test.cpp  simd_tanh_test.cpp  unity_gain_test.cpp  visualize_boundtopi_error.py  visualize_cos_error.py  visualize_tan_error.py  visualize_tanh_error.py  viz_aligned_buffer_layout.py  viz_chronos_reverb.py  viz_cosh.py  viz_delay_functional.py  viz_diffusion.py  viz_ducker.py  viz_ou_drift.py  viz_sinh.py  viz_splane_filter_response.py  viz_unity_gain.py  viz_wdf.py  wdf_diode_pair_test.cpp  wow_flutter_characterisation_test.cpp
tests/simd_harness/logs/: chronos_reverb_amount_stability.csv  chronos_reverb_frequency_response.csv  chronos_reverb_impulse_envelope.csv  chronos_reverb_mix_sweep.csv  chronos_reverb_smoke.csv  chronos_reverb_stereo_correlation.csv  chronos_reverb_t60_vs_decay.csv  delay_engine_ducker.csv  diffusion_energy.csv  diffusion_impulse.csv  diffusion_matrix.csv  fdn_amount_stability.csv  fdn_decay.csv  flutter_trace.csv  func_block_sizes.csv  func_extreme_params.csv  func_mode_switch.csv  func_reset.csv  func_ringout.csv  func_silence_tail.csv  func_streaming.csv  func_summary.csv  func_varying_blocks.csv  newton_audio.csv  newton_convergence.csv  newton_dc_sweep.csv  newton_simd_vs_scalar.csv  ou_drift_autocorr.csv  ou_drift_distribution.csv  ou_drift_mean_reversion.csv  ou_drift_stats.csv  reverb2_port_smoke.csv  simd_alignment_delay.csv  simd_alignment_math.csv  simd_boundtopi_results.csv  simd_cos_results.csv  simd_cosh_adaa_results.csv  simd_cosh_results.csv  simd_delay_data.csv  simd_ducker_smoke_audio.csv  (+13 more)
